# bc-cvlb

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  models.py  schemas.py
